admin show list category

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,10 +1,18 @@
 en:
+######################### Author #################################
+  authors:
+    show:
+      book_by: "Books by %{author}"
+      follow_author: "Follow %{author}"
+##################################################################
 ######################### Comment ################################
   comments:
     create:
       please_login: "Please login!"
     destroy:  
       dont_permision: "you don't have permission"
+    form:
+      send: "Send"
 ##################################################################
 ######################### Book ###################################
   books:
@@ -45,7 +53,7 @@ en:
       books: "Books"
       login: "Login"
       logout: "Logout"
-      search: "Search by title book, name author, category"
+      search: "Search by title book, name author"
     footer:
       library: "Framgia Library"
       copy: "&copy All right Reversed."
