admin manager requirement book

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -155,3 +155,12 @@ en:
   rates:
     create:
       error: "Something wrong!"
+##################################################################
+######################### Requirement Mailer #####################
+  requirement_mail:
+    approved_mailer:
+      approver_mailer:
+        approved: ""
+      rejected_mailer:
+        rejected: ""
+##################################################################
